--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "seed:admin": "ts-node scripts/seed-admin.ts"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.21",
