chore: implement custom carousel react components

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.0",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "grapesjs": "^0.22.7",
     "grapesjs-blocks-basic": "^1.0.2",
     "grapesjs-blocks-flexbox": "^1.0.1",
@@ -46,6 +49,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-swipeable": "^7.0.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
