--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grapesjs-preset-webpage": "^1.0.3",
     "grapesjs-style-bg": "^2.0.2",
     "grapesjs-tabs": "^1.0.6",
+    "grapesjs-tailwindcss-plugin": "^0.1.9",
     "grapesjs-tooltip": "^0.1.8",
     "grapesjs-touch": "^0.1.1",
     "grapesjs-tui-image-editor": "^1.0.2",
