chore: add seeder data

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed:admin": "tsx ./src/db/seeder/admin.ts"
+    "seed:admin": "tsx ./src/db/seeder/admin.ts",
+    "seed:content": "tsx ./src/db/seeder/content.ts"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
