--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.21",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.0",
